--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -6,5 +6,7 @@
     <th>Patient</th>
   </tr>
   <% @doctor.appointments.each do |appointment| %>
-
+    <tr>
+      <td><%= link_to appointment.patient, patient_path(appointment.patient)</td>
+    </tr>
   <% end %>
