Automatically backed up by Learn

--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,2 +1,3 @@
-<h1><%=@appointment.doctor.name%></h1>
-<h1><%=@appointment.patient.name%></h1>
+<h1>Doctor: <%=@appointment.doctor.name%></h1>
+<h1>Patient: <%=@appointment.patient.name%></h1>
+<h2>Time: <%=@appointment.appointment_datetime.to_formatted_s(<%=@appointment.patient.name%>)%>
