--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,3 +1,3 @@
-<h1>Doctor: <%=@appointment.doctor.name%></h1>
-<h1>Patient: <%=@appointment.patient.name%></h1>
+<h1>Doctor: <%=link_to @appointment.doctor.name, doctor_path(@appointment.doctor.name)%></h1>
+<h1>Patient: <%=link_to @appointment.patient.name, patient_path(@appointment.patient.name)%></h1>
 <h2>Time: <%=@appointment.appointment_datetime.to_formatted_s(:long_ordinal)%>
