--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,3 +1,3 @@
 <h1>Doctor: <%=link_to @appointment.doctor.name, doctor_path(@appointment.doctor)%></h1>
 <h1>Patient: <%=link_to @appointment.patient.name, patient_path(@appointment.patient)%></h1>
-<h2>Time: <%=@appointment.appointment_datetime.strftime("%B %-d, %Y at %r")%>
+<h2>Time: <%=@appointment.appointment_datetime.strftime("%B %-d, %Y at %R")%>
